--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Научиться учиться</title>
 </head>
 <body>
     <div class="page">
         <header class="header">
-
+            <img src="images/logo.svg" alt="logo" class="logo__place_header">
+            <h1 class="header__title">
+                Научиться учиться
+            </h1>
+            <h3 class="header__subtitle">
+                Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+                <a class="header__link" href="#">Узнать&nbsp;&rarr;</a>
+            </h3>
+            <img src="images/two_again.png" alt="how to learn" class="header__main-illustration">
+            <div class="header__square-pic"></div>
         </header>
         <main class="content">
             <section class="description">
+
             </section>
             
             <section class="digits">
